Created buttons that acts as links. Also inserted photos into the buttons

--- a/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.html
+++ b/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.html
@@ -1,1 +1,5 @@
-<h1>works!</h1>
+<div class="links">
+<button class="logo-button" onclick="window.location.href='https://easyreservation.simplyture.com/EnterLicensePlate?id=16BBD08D-43DA-4B5B-82B0-981B4B062B6E';"><img src="../../../../assets/images/simplyture.png" class="logo-image"></button>
+<button class="logo-button" onclick="window.location.href='https://taxa.nu/ywelcome20.asp';"><img src="../../../../assets/images/taxa.png" style="height: inherit; width: inherit;" class="logo-image"></button>
+<button class="logo-button" onclick="window.location.href='https://mte5-oc.oracleindustry.com/OPERA9/opera/operacloud/faces/opera-cloud-index/OperaCloud';"><img src="../../../../assets/images/opera.png" class="logo-image"></button>
+</div>
