Add login functionality

--- a/apps/frontend/src/app/pages/login/login.component.html
+++ b/apps/frontend/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
 
     <mat-form-field appearance="fill" autocomplete="off" class="full-width no-margin white-input">
       <mat-label>Password</mat-label>
-      <input #password type="text" formControlName="password" matInput placeholder="Password" />
+      <input #password type="password" formControlName="password" matInput placeholder="Password" />
     </mat-form-field>
 
     <button class="action-btn half-width" mat-raised-button type="submit">
