--- a/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.scss
+++ b/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.scss
@@ -1,7 +1,13 @@
 .logo-image {
-    height: inherit; width: inherit;
-  }
+  height: inherit;
+  width: inherit;
+  border: solid;
+  border-radius: 10px;
+  border-color: black;
+}
 
-.logo-button {
-    width: 200px; height: 100px; margin: 20px; border-radius: 10px; background-color: white; overflow: hidden; padding: 0;
+.logo-a {
+  width: 200px;
+  height: 100px;
+  margin: 20px;
 }
