feat: 🎸 upgrade styling and add title

--- a/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.html
+++ b/apps/frontend/src/app/components/dashboardWidgets/dashboard-links/dashboard-links.component.html
@@ -1,21 +1,25 @@
-<div class="links">
-  <a
-    href="https://easyreservation.simplyture.com/EnterLicensePlate?id=16BBD08D-43DA-4B5B-82B0-981B4B062B6E"
-    class="logo-a"
-    target="_blank"
-  >
-    <img src="../../../../assets/images/simplyture.png" class="logo-image" />
-  </a>
-  <a href="https://taxa.nu/ywelcome20.asp"
-     class="logo-a"
-     target="_blank">
-    <img src="../../../../assets/images/taxa.png" class="logo-image" />
-  </a>
-  <a
-    href="https://mte5-oc.oracleindustry.com/OPERA9/opera/operacloud/faces/opera-cloud-index/OperaCloud"
-    class="logo-a"
-    target="_blank"
-  >
-    <img src="../../../../assets/images/opera.png" class="logo-image" />
-  </a>
-</div>
+<section>
+  <div class="link-title-container">
+    <h2>Links</h2>
+    <hr>
+  </div>
+  <div class="links-container">
+    <a
+      href="https://easyreservation.simplyture.com/EnterLicensePlate?id=16BBD08D-43DA-4B5B-82B0-981B4B062B6E"
+      target="_blank"
+      alt="Simplyture logo"
+    >
+      <img src="../../../../assets/images/simplyture.png" />
+    </a>
+    <a href="https://taxa.nu/ywelcome20.asp" target="_blank" alt="Taxa logo">
+      <img src="../../../../assets/images/taxa.png" />
+    </a>
+    <a
+      href="https://mte5-oc.oracleindustry.com/OPERA9/opera/operacloud/faces/opera-cloud-index/OperaCloud"
+      target="_blank"
+      alt="Opera Link"
+    >
+      <img src="../../../../assets/images/opera.png" />
+    </a>
+  </div>
+</section>
