--- a/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/updateCheckoutDialog/update-checkout-dialog.component.html
@@ -133,6 +133,11 @@
 
   <div class="dialog-row">
     <button mat-raised-button class="secodary-btn" mat-dialog-close>Cancel</button>
-    <button mat-raised-button class="secondary-btn" type="submit">Update</button>
+    <button mat-raised-button class="secondary-btn" type="submit">
+      <div *ngIf="!isLoading">Update</div>
+      <div *ngIf="isLoading" class="btn-spinner">
+        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+      </div>
+    </button>
   </div>
 </form>
