--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -132,6 +132,11 @@
 
   <div class="dialog-row">
     <button class="secondary-btn" mat-raised-button mat-dialog-close type="button">Cancel</button>
-    <button class="action-btn" mat-raised-button type="submit">Update</button>
+    <button class="action-btn" mat-raised-button type="submit">
+      <div *ngIf="!isLoading">Update</div>
+      <div *ngIf="isLoading" class="btn-spinner">
+        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+      </div>
+    </button>
   </div>
 </form>
