--- a/apps/frontend/src/app/pages/bikes/updateBikeEntryDialog/update-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/updateBikeEntryDialog/update-bike-dialog.component.html
@@ -107,6 +107,11 @@
   <div class="dialog-row">
     <button class="secondary-btn" type="button" mat-raised-button mat-dialog-close>Cancel</button>
 
-    <button class="action-btn" mat-flat-button type="submit">Update</button>
+    <button class="action-btn" mat-flat-button type="submit">
+      <div *ngIf="!isLoading">Update</div>
+      <div *ngIf="isLoading" class="btn-spinner">
+        <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+      </div>
+    </button>
   </div>
 </form>
