--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -33,9 +33,7 @@
 
     <!-- <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>Room status</mat-label>
-      <mat-select
-        formControlName="roomReady"
-      >
+      <mat-select formControlName="roomReady">
         <mat-option value="false">Not ready</mat-option>
         <mat-option value="true">Ready</mat-option>
       </mat-select>
@@ -77,7 +75,7 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off" appearance="fill">
       <mat-label>BB in LR</mat-label>
-      <mat-select formControlName="bbLR">
+      <mat-select #bbLr formControlName="bbLr">
         <mat-option *ngFor="let initials of bbInitials" [value]="initials">
           {{ initials }}
         </mat-option>
@@ -91,7 +89,7 @@
 
     <mat-form-field autocomplete="off" class="input" appearance="fill">
       <mat-label>Location</mat-label>
-      <mat-select formControlName="location">
+      <mat-select #location formControlName="location">
         <mat-option *ngFor="let location of luggageLocation" [value]="location">
           {{ location }}
         </mat-option>
