--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -27,27 +27,15 @@
       </mat-error>
     </mat-form-field>
 
-    <input type="date" formControlName="arrivalTime">
-    <!-- <mat-form-field appearance="fill"> REMOVE
+    <mat-form-field class="remove-error-message">
       <mat-label>Date in</mat-label>
       <input
+        onclick="this.showPicker()"
         matInput
-        [ngxMatDatetimePicker]="arrivalTimePicker"
-        placeholder="dd/MM HH:mm"
+        type="datetime-local"
         formControlName="arrivalTime"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(arrivalTimePicker)"
-      ></mat-datepicker-toggle>
-      <ngx-mat-datetime-picker
-        #arrivalTimePicker
-        [showSpinners]="true"
-        [showSeconds]="false"
-        [touchUi]="true"
-      >
-      </ngx-mat-datetime-picker>
-    </mat-form-field> -->
+    </mat-form-field>
   </div>
 
   <div class="dialog-row">
@@ -118,27 +106,15 @@
       </mat-error>
     </mat-form-field>
 
-    <input type="date" formControlName="dateNeeded">
-    <!-- <mat-form-field autocomplete="off" appearance="fill"> REMOVE
+    <mat-form-field class="remove-error-message">
       <mat-label>Date needed</mat-label>
       <input
+        onclick="this.showPicker()"
         matInput
-        [ngxMatDatetimePicker]="dateNeededPicker"
-        placeholder="dd/MM HH:mm"
+        type="datetime-local"
         formControlName="dateNeeded"
       />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="$any(dateNeededPicker)"
-      ></mat-datepicker-toggle>
-      <ngx-mat-datetime-picker
-        #dateNeededPicker
-        [showSpinners]="true"
-        [showSeconds]="false"
-        [touchUi]="true"
-      >
-      </ngx-mat-datetime-picker>
-    </mat-form-field> -->
+    </mat-form-field>
   </div>
 
   <div class="dialog-row">
