--- a/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/updateCarEntryDialog/update-car-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -25,7 +25,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Tag nr.</mat-label>
       <input
         #tagNr
@@ -67,7 +67,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Name</mat-label>
     <input
       #name
@@ -86,7 +86,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>License plate</mat-label>
       <input
         #licensePlate
@@ -139,7 +139,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB down</mat-label>
       <input
         #bbDown
@@ -158,7 +158,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB up</mat-label>
       <input
         #bbUp
@@ -178,7 +178,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Location</mat-label>
       <input
         #location
@@ -197,7 +197,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Parking lot</mat-label>
       <input
         type="text"
@@ -216,7 +216,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <input
       #comments
