--- a/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/updateCheckinDialog/update-checkin-dialog.component.html
@@ -3,7 +3,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label class="input-label">Room nr.</mat-label>
       <input
         #room
@@ -28,7 +28,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Name</mat-label>
     <input
       #name
@@ -43,7 +43,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Nr of bags</mat-label>
       <input
         #bags
@@ -57,7 +57,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Tag nr.</mat-label>
       <input
         #tagNr
@@ -73,7 +73,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB in LR</mat-label>
       <input
         #bbLr
@@ -87,7 +87,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Location</mat-label>
       <input
         #location
@@ -116,7 +116,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <input
       type="text"
