--- a/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
+++ b/apps/frontend/src/app/pages/documents/createDocumentDialog/create-document-dialog.component.html
@@ -8,7 +8,7 @@
 
   <div class="dialog-row"></div>
 
-  <mat-form-field appearance="fill" autocomplete="off" class="full-width">
+  <mat-form-field  autocomplete="off" class="full-width">
     <mat-label>Title</mat-label>
     <input
       #title
@@ -27,7 +27,7 @@
     </mat-error>
   </mat-form-field>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
