--- a/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/createAssignmentDialog/create-assignment-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field appearance="fill" autocomplete="off">
+    <mat-form-field  autocomplete="off">
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -26,7 +26,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" autocomplete="off">
+    <mat-form-field  autocomplete="off">
       <mat-label>Task</mat-label>
       <input
         #task
@@ -47,7 +47,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Received by</mat-label>
       <input
         #receivedBy
@@ -66,7 +66,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Performed by</mat-label>
       <input
         #performedBy
@@ -109,7 +109,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
