--- a/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/updateAssignmentDialog/update-assignment-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -27,7 +27,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Task</mat-label>
       <input
         #task
@@ -47,7 +47,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
@@ -67,7 +67,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Received by</mat-label>
       <input
         #receivedBy
@@ -86,7 +86,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Performed by</mat-label>
       <input
         #performedBy
