--- a/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/createBikeEntryDialog/create-bike-dialog.component.html
@@ -3,7 +3,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -22,7 +22,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+    <mat-form-field autocomplete="off"  class="full-width">
       <mat-label>Name</mat-label>
       <input
         #name
@@ -43,7 +43,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Reserved by</mat-label>
       <input
         #reservedBy
@@ -62,7 +62,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Number of bikes</mat-label>
       <input
         #nrOfBikes
@@ -104,7 +104,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Comments</mat-label>
     <input
       #comments
