--- a/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/createCheckinDialog/create-checkin-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -37,7 +37,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Name</mat-label>
     <input
       #name
@@ -57,7 +57,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Nr of bags</mat-label>
       <input
         #bags
@@ -76,7 +76,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Tag nr</mat-label>
       <input
         #tagNr
@@ -97,7 +97,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB in LR</mat-label>
       <input
         #bbLr
@@ -116,7 +116,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label>Location</mat-label>
       <input
         #location
@@ -137,7 +137,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label>BB Out</mat-label>
       <input type="text" formControlName="bbOut" matInput placeholder="JD" />
       <mat-error
@@ -161,7 +161,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" class="full-width" appearance="fill">
+  <mat-form-field autocomplete="off" class="full-width" >
     <mat-label>Comments</mat-label>
     <textarea
       type="text"
