--- a/apps/frontend/src/app/pages/checkout/createCheckoutDialog/create-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/createCheckoutDialog/create-checkout-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -26,7 +26,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Nr of bags</mat-label>
       <input
         #bags
@@ -46,7 +46,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Name</mat-label>
     <input
       #name
@@ -66,7 +66,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Tag nr.</mat-label>
       <input
         #tagNr
@@ -85,7 +85,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB down</mat-label>
       <input
         #bbDown
@@ -106,7 +106,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Location</mat-label>
       <input
         #location
@@ -125,7 +125,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>BB in LR</mat-label>
       <input
         #bbLr
@@ -146,7 +146,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label>BB Out</mat-label>
       <input type="text" formControlName="bbOut" matInput placeholder="JD" />
       <mat-error
@@ -170,7 +170,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field autocomplete="off" class="full-width" appearance="fill">
+  <mat-form-field autocomplete="off" class="full-width" >
     <mat-label>Comments</mat-label>
     <textarea
       type="text"
