--- a/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/createLongTermDialog/create-long-term-dialog.component.html
@@ -7,7 +7,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field appearance="fill">
+    <mat-form-field >
       <mat-label>Room nr.</mat-label>
       <input
         #room
@@ -39,7 +39,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label class="input-label">Name</mat-label>
       <input
         #name
@@ -61,7 +61,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">Nr of bags</mat-label>
       <input
@@ -86,7 +86,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">Tag nr</mat-label>
       <input
@@ -121,7 +121,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">BB in LR</mat-label>
       <input
@@ -141,7 +141,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label class="input-label">Location</mat-label>
       <input
         #location
@@ -161,7 +161,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field appearance="fill" class="full-width">
+  <mat-form-field  class="full-width">
     <mat-label>Comments</mat-label>
     <textarea
       #comments
