--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="table-actions">
     <div>
-      <mat-form-field appearance="fill" class="remove-error-message">
+      <mat-form-field  class="remove-error-message">
         <mat-label>Search</mat-label>
         <input
           type="text"
@@ -14,7 +14,7 @@
       </mat-form-field>
       <mat-form-field
         autocomplete="off"
-        appearance="fill"
+        
         style="width: 150px"
         class="remove-error-message"
       >
