--- a/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/updateLongTermDialog/update-long-term-dialog.component.html
@@ -9,7 +9,7 @@
   <!-- Date in -->
   <div class="dialog-row"></div>
 
-  <mat-form-field autocomplete="off" appearance="fill" class="full-width">
+  <mat-form-field autocomplete="off"  class="full-width">
     <mat-label>Room nr.</mat-label>
     <input
       #room
@@ -30,7 +30,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label class="input-label">Name</mat-label>
       <input
         #name
@@ -52,7 +52,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">Nr of bags</mat-label>
       <input
@@ -77,7 +77,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">Tag nr</mat-label>
       <input
@@ -112,7 +112,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">BB in LR</mat-label>
       <input
@@ -132,7 +132,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field autocomplete="off" class="input" appearance="fill">
+    <mat-form-field autocomplete="off" class="input" >
       <mat-label class="input-label">Location</mat-label>
       <input
         #location
@@ -156,7 +156,7 @@
     <mat-form-field
       autocomplete="off"
       class="input one-third"
-      appearance="fill"
+      
     >
       <mat-label class="input-label">BB out</mat-label>
       <input
@@ -187,7 +187,7 @@
     </mat-form-field>
   </div>
 
-  <mat-form-field appearance="fill" class="full-width">
+  <mat-form-field  class="full-width">
     <mat-label>Description</mat-label>
     <textarea
       #comments
