--- a/apps/frontend/src/app/pages/tasks/editTaskDialog/editTaskDialog.component.html
+++ b/apps/frontend/src/app/pages/tasks/editTaskDialog/editTaskDialog.component.html
@@ -2,7 +2,7 @@
   <h1>Complete Task</h1>
   <hr />
   <div class="dialog-row">
-    <mat-form-field autocomplete="off" appearance="fill">
+    <mat-form-field autocomplete="off" >
       <mat-label>Initials</mat-label>
       <input
         #initials
