Fully connect manager access logic to create document

--- a/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
+++ b/apps/frontend/src/app/components/manager-access-dialog/manager-access-dialog.component.html
@@ -2,6 +2,8 @@
   <h1>Manager access</h1>
   <hr />
 
+  <p *ngIf="!dialogData">Your access has expired!</p>
+
   <mat-form-field autocomplete="off" appearance="fill" class="full-width">
     <mat-label>Password</mat-label>
     <input #password type="password" formControlName="password" matInput required />
